--- a/package/kernel/mt76/Makefile
+++ b/package/kernel/mt76/Makefile
@@ -8,9 +8,9 @@ PKG_LICENSE_FILES:=
 
 PKG_SOURCE_URL:=https://github.com/openwrt/mt76
 PKG_SOURCE_PROTO:=git
-PKG_SOURCE_DATE:=2025-07-07
-PKG_SOURCE_VERSION:=32ca2b6db354db090eb306e9f5b85651e92dfa8b
-PKG_MIRROR_HASH:=01d3ec909e474f4ccdfdab6559c30c54d05abdd87db2e9fdadb548e09a3fec2a
+PKG_SOURCE_DATE:=2025-02-14
+PKG_SOURCE_VERSION:=e5fef138524e63314cb96ff8314048d175294e95
+PKG_MIRROR_HASH:=4d6ea8669b3034c97f5b341a5473facf4fe21262a2fde71257b57c4d1c86be5e
 
 PKG_MAINTAINER:=Felix Fietkau <nbd@nbd.name>
 PKG_USE_NINJA:=0
@@ -41,8 +41,7 @@ define KernelPackage/mt76-default
   DEPENDS:= \
 	+kmod-mac80211 \
 	+@DRIVER_11AC_SUPPORT \
-	+@KERNEL_PAGE_POOL \
-	@!TARGET_uml
+	+@KERNEL_PAGE_POOL
 endef
 
 define KernelPackage/mt76
